# build-neural-network

./: 01.py  02.md  02.py  03.py  09.py  10.py  12.py  13.py  README.md  index.py  pyproject.toml
src/: 01.py  04.py  05.py  06.py  07.py  08.py  11.py  12.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py  30.py  31.py  32.py  33.py  34.py  35.py
